fix material design components z-index

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -197,6 +197,10 @@ main {
     height: 100vh;
 }
 
+.md-ripple {
+    z-index: inherit !important;
+}
+
 .divided {
     aside {
         margin: 0 16px;
